# ns3

./: .clang-format  .clang-tidy  .codespellrc  .dockerignore  .editorconfig  .gitignore  .lock-ns3_linux_build  AUTHORS  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  JITTER_METRICS.md  METRICAS_VARIADAS.md  QoS_flowmonitor.xml  README.md  RELEASE_NOTES.md  VERSION  akiyo.st  akiyo_fixed.st  bowing.st  bowing_fixed.st  calculate_jitter.py  coastguard.st  container.st  docker-compose.yml  fix_st_file.sh  football.st  generate_comparison_charts.py  generate_png_graphs.py  generate_varied_metrics.py  ice.st  ice.st.bak  mother_daughter_cif.st  mother_daughter_cif.st.bak  pyproject.toml  rd_a01  rd_a01_lte  run_lte_sdn_evaluation.sh  script_automação.sh  (+5 more)
.devcontainer/: devcontainer.json
build-support/: .ns3rc-template  cmake-format-modules.yaml  cmake-format.yaml  config-store-config-template.h  core-config-template.h  empty-main.cc  macros-and-definitions.cmake  pkgconfig-template.pc.in  version-defines-template.h  version.cache.in
cmake-cache/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  compile_commands.json  ns3.39-stdlib_pch_exec-optimized  ns3config.txt  ns3scratches
contrib/: .gitignore
doc/: build.txt  codingstd.txt  contributing.txt  doxygen.conf  main.h  modules  release_steps.txt
examples/: CMakeLists.txt
results_20251214_010651/: RELATORIO.txt
results_lte_sdn_20251213_172037/: RELATORIO_FINAL.txt  (+2 more)
scratch/lte-sdn-evalvid/: CMakeLists.txt  main.cc  video-qos-controller.cc  video-qos-controller.h
(+4982 files in other folders)
